--- a/template/examples/contract-hello/package.json
+++ b/template/examples/contract-hello/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": [
     "ethereum",
-    "substrate"
+    "axlib"
   ],
   "author": "Parity Technologies <admin@parity.io>",
   "license": "GPL-3.0",
