--- a/client/consensus/Cargo.toml
+++ b/client/consensus/Cargo.toml
@@ -2,28 +2,28 @@
 name = "fc-consensus"
 version = "2.0.0-dev"
 authors = ["Parity Technologies <admin@parity.io>"]
-description = "Frontier consensus for substrate"
+description = "Frontier consensus for axlib"
 edition = "2018"
 license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
 repository = "https://github.com/paritytech/frontier/"
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
-sp-core = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-runtime = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-api = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-client-api = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-inherents = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
+sp-core = { version = "4.0.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-runtime = { version = "4.0.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-api = { version = "4.0.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-client-api = { version = "4.0.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-inherents = { version = "4.0.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
 fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
 fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
 fc-db = { version = "2.0.0-dev", path = "../db" }
-sp-consensus = { version = "0.10.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-consensus = { version = "0.10.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
+sp-consensus = { version = "0.10.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-consensus = { version = "0.10.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
 log = "0.4.8"
 futures = { version = "0.3.1", features = ["compat"] }
-sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
+sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
 derive_more = "0.99.2"
-prometheus-endpoint = { version = "0.9.0", package = "substrate-prometheus-endpoint", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
+prometheus-endpoint = { version = "0.9.0", package = "axlib-prometheus-endpoint", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
 async-trait = "0.1"
