--- a/frame/evm/precompile/simple/Cargo.toml
+++ b/frame/evm/precompile/simple/Cargo.toml
@@ -4,13 +4,13 @@ version = "2.0.0-dev"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 license = "Apache-2.0"
-homepage = "https://substrate.io"
+homepage = "https://axlib.io"
 repository = "https://github.com/paritytech/frontier/"
 description = "Simple precompiles for EVM pallet."
 
 [dependencies]
-sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
+sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
 fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
 ripemd160 = { version = "0.9", default-features = false }
 
