--- a/primitives/consensus/Cargo.toml
+++ b/primitives/consensus/Cargo.toml
@@ -5,13 +5,13 @@ authors = ["Parity Technologies <admin@parity.io>"]
 description = "Primitives for Frontier consensus"
 edition = "2018"
 license = "Apache-2.0"
-homepage = "https://substrate.io"
+homepage = "https://axlib.io"
 repository = "https://github.com/paritytech/frontier/"
 
 [dependencies]
-sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
+sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
 ethereum = { version = "0.9.0", default-features = false, features = ["with-codec"] }
 rlp = { version = "0.5", default-features = false }
