--- a/primitives/self-contained/Cargo.toml
+++ b/primitives/self-contained/Cargo.toml
@@ -4,22 +4,22 @@ version = "1.0.0-dev"
 license = "Apache-2.0"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
-homepage = "https://substrate.io"
+homepage = "https://axlib.io"
 repository = "https://github.com/paritytech/frontier/"
-description = "Primitive Ethereum abstractions for Substrate."
+description = "Primitive Ethereum abstractions for Axlib."
 documentation = "https://docs.rs/fp-ethereum"
 
 [dependencies]
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
 ethereum = { version = "0.9.0", default-features = false, features = ["with-codec"] }
-sp-core = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-runtime = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-io = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
+sp-core = { version = "4.0.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master", default-features = false }
+sp-runtime = { version = "4.0.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master", default-features = false }
+sp-io = { version = "4.0.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master", default-features = false }
 scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
 parity-util-mem = { version = "0.10", optional = true }
 sha3 = { version = "0.8", default-features = false }
-frame-support = { version = "4.0.0-dev", git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
+frame-support = { version = "4.0.0-dev", git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master", default-features = false }
 
 [features]
 default = ["std"]
