--- a/template/node/Cargo.toml
+++ b/template/node/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "frontier-template-node"
 version = "0.0.0"
-authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
-description = "A fresh FRAME-based Substrate node, ready for hacking."
+authors = ["Axlib DevHub <https://github.com/axlib-developer-hub>"]
+description = "A fresh FRAME-based Axlib node, ready for hacking."
 edition = "2018"
 license = "Unlicense"
 build = "build.rs"
-homepage = "https://substrate.io"
-repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
+homepage = "https://axlib.io"
+repository = "https://github.com/axlib-developer-hub/frontier-node-template/"
 publish = false
 
 [package.metadata.docs.rs]
@@ -20,41 +20,41 @@ jsonrpc-pubsub = "18.0.0"
 futures = "0.3"
 log = "0.4.8"
 
-sc-cli = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", features = ["wasmtime"] }
-sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-executor = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", features = ["wasmtime"] }
-sc-service = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", features = ["wasmtime"] }
-sc-telemetry = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-keystore = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-transaction-pool-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-consensus-aura = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-consensus-aura = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-consensus-manual-seal = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-network = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-finality-grandpa = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-finality-grandpa = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-client-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-inherents = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
+sc-cli = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master", features = ["wasmtime"] }
+sp-core = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-executor = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master", features = ["wasmtime"] }
+sc-service = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master", features = ["wasmtime"] }
+sc-telemetry = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-keystore = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-transaction-pool = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-transaction-pool-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-consensus-aura = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-consensus-aura = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-consensus = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-consensus-manual-seal = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-network = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-finality-grandpa = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-finality-grandpa = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-client-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-runtime = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-timestamp = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-inherents = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
 
 # These dependencies are used for the node template's RPCs
 jsonrpc-core = "18.0.0"
-sc-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-rpc-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-sc-basic-authorship = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-substrate-frame-rpc-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-pallet-transaction-payment-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
+sc-rpc = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-rpc-api = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-blockchain = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sp-block-builder = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+sc-basic-authorship = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+axlib-frame-rpc-system = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+pallet-transaction-payment-rpc = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
 
 # These dependencies are used for runtime benchmarking
-frame-benchmarking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
-frame-benchmarking-cli = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
+frame-benchmarking = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
+frame-benchmarking-cli = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
 
 fc-consensus = { path = "../../client/consensus" }
 fp-consensus = { path = "../../primitives/consensus" }
@@ -70,7 +70,7 @@ pallet-ethereum = { path = "../../frame/ethereum" }
 pallet-dynamic-fee = { path = "../../frame/dynamic-fee" }
 
 [build-dependencies]
-substrate-build-script-utils = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
+axlib-build-script-utils = { git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
 
 [features]
 default = ["aura"]
