--- a/template/utils/package.json
+++ b/template/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "substrate-evm-utils",
+  "name": "axlib-evm-utils",
   "version": "0.0.0",
   "dependencies": {
     "@polkadot/util-crypto": "^2.2.1",
