--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,4 +28,4 @@ members = [
 evm = { git = "https://github.com/AXIA-DEV/axianetwork-evm", branch = "master" }
 evm-runtime = { git = "https://github.com/AXIA-DEV/axianetwork-evm", branch = "master" }
 evm-gasometer = { git = "https://github.com/AXIA-DEV/axianetwork-evm", branch = "master" }
-ethereum = { git = "https://github.com/AXIA-DEV/axianetwork-ethereum", branch = "master" }
+ethereum = { git = "https://github.com/purestake/ethereum", branch = "joshy-scale-info" }
