--- a/client/rpc/Cargo.toml
+++ b/client/rpc/Cargo.toml
@@ -35,7 +35,8 @@ sc-network = { version = "0.10.0-dev", git = "https://github.com/AXIA-DEV/axlib-
 pallet-evm = { version = "6.0.0-dev", path = "../../frame/evm" }
 fp-evm = { version = "3.0.0-dev", path = "../../primitives/evm" }
 pallet-ethereum = { version = "4.0.0-dev", path = "../../frame/ethereum" }
-ethereum = { version = "0.9.0", features = ["with-codec"] }
+ethereum = { git = "https://github.com/AXIA-DEV/axianetwork-ethereum", branch = "v0.9.0", features = ["with-codec"] }
+
 codec = { package = "parity-scale-codec", version = "2.0.0" }
 rlp = "0.5"
 futures = { version = "0.3.1", features = ["compat"] }
