--- a/template/utils/package.json
+++ b/template/utils/package.json
@@ -2,7 +2,7 @@
   "name": "axlib-evm-utils",
   "version": "0.0.0",
   "dependencies": {
-    "@polkadot/util-crypto": "^2.2.1",
+    "@axia/util-crypto": "^2.2.1",
     "keccak": "^3.0.0",
     "web3": "^1.2.6"
   }
